Ignoring more files in bower.json

--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,10 @@
   "ignore": [
     "**/.*",
     "imported",
-    "lib"
+    "lib",
+    "*.rb",
+    "Gemfile*",
+    "README.md"
   ],
   "private": true
 }
