--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,2 +1,11 @@
+Metrics/AbcSize:
+  Enabled: false
+
+Metrics/MethodLength:
+  Enabled: false
+
+Metrics/ParameterLists:
+  Enabled: false
+
 Style/Documentation:
   Enabled: false
